# slider-recognize

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish_docker.yml
src/: __init__.py  app.py  core.py  image.py  utils.py
src/api/: __init__.py  deps.py  router.py
src/api/routes/: __init__.py  arithmetic.py  health.py  slider.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  ocr.py  opencv.py
src/exceptions/: __init__.py  base.py  handlers.py
src/logger/: __init__.py  setup.py
src/schemas/: __init__.py  request.py  response.py
src/services/: __init__.py  arithmetic.py  slider.py
src/utils/: __init__.py  image.py  validators.py
